limpio codigo y vuelvo a empezar

--- a/proyectoAngularSantex/src/app/app.component.html
+++ b/proyectoAngularSantex/src/app/app.component.html
@@ -1,9 +1,28 @@
 
 <div class="content" role="main">
+  <h1>Proyecto Angular - Utilizando Angular Material</h1>
+  <h2>Desafio Mostar y Ocultar Una Lista</h2>
 
+<!-- <table *ngIf="showList">
+    <tr>
+      <th>Position</th>
+      <th>Name</th>
+      <th>Cost</th>
+    </tr>
 
+    <tr *ngFor="let product of products">
+      <td>{{product.position}}</td>
+      <td>{{product.name}}</td>
+      <td>{{product.cost}}</td>
+    </tr>
 
-<mat-slide-toggle></mat-slide-toggle>
+</table>
+<p *ngIf="!showList">{{message}}</p> -->
+
+<!-- <button 
+  [ngStyle]="{'background-color': showList ? 'red' : 'blue'}" 
+  (click)="showDisguiseList()"
+  >{{statusButton}}</button> -->
 
 
 </div>
