--- a/proyectoAngularSantex/src/app/app.component.html
+++ b/proyectoAngularSantex/src/app/app.component.html
@@ -1,30 +1,86 @@
 
 <div class="content" role="main">
-  <h1>Proyecto Angular - Utilizando Angular Material</h1>
-  <h2>Desafio Mostar y Ocultar Una Lista</h2>
+  
+  <h1 class="title">Proyecto Angular - Utilizando Angular Material</h1>
+  <h2 class="subTitle">Desafio Mostar y Ocultar Una Lista</h2>
 
-<!-- <table *ngIf="showList">
-    <tr>
-      <th>Position</th>
-      <th>Name</th>
-      <th>Cost</th>
-    </tr>
+<!-- --------- TRABAJADO CON ANGULAR MATERIAL ------ -->
 
-    <tr *ngFor="let product of products">
-      <td>{{product.position}}</td>
-      <td>{{product.name}}</td>
-      <td>{{product.cost}}</td>
-    </tr>
+<!-- Boton Material  -->
+<div class="contentButton">
+  <button 
+    class="button"
+    [ngStyle]="{
+                'background-color': showList 
+                ? 'rgb(205, 130, 130)' 
+                : 'rgb(110, 110, 242)'
+              }" 
+              
+    (click)="showDisguiseList()" 
+      
+    mat-raised-button
+  >{{statusButton}}</button>
+</div>
 
-</table>
-<p *ngIf="!showList">{{message}}</p> -->
+<div *ngIf="showList" class="contentTable">
+  <!-- Tabla Material -->
+  <table mat-table [dataSource]="products" class="mat-elevation-z8 ">
 
-<!-- <button 
-  [ngStyle]="{'background-color': showList ? 'red' : 'blue'}" 
-  (click)="showDisguiseList()"
-  >{{statusButton}}</button> -->
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> Articulo </th>
+      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Nombre Pokemon</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <!-- Cost Column -->
+    <ng-container matColumnDef="cost">
+      <th mat-header-cell *matHeaderCellDef> Costo </th>
+      <td mat-cell *matCellDef="let element"> {{element.cost | currency}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
+<!-- Mensaje de No hay lista -->
+<div *ngIf="!showList" class="constentMessage">
+  <p >
+    <span [ngStyle]="{'font-size': '30px', 'margin-right': '20px'}">⚠️</span> 
+    {{messajeNoList}}
+  </p>
+</div>
 
 
+<!-- Probando a la manera hecho en clases  -->
+  <!-- <table *ngIf="showList">
+      <tr>
+        <th>Position</th>
+        <th>Name</th>
+        <th>Cost</th>
+      </tr>
+
+      <tr *ngFor="let product of products">
+        <td>{{product.position}}</td>
+        <td>{{product.name}}</td>
+        <td>{{product.cost | currency}}</td>
+      </tr>
+
+  </table>
+  <p *ngIf="!showList" ><span >⚠️</span> {{messajeNoList}}</p>
+ 
+
+  <button 
+    [ngStyle]="{'background-color': showList ? 'red' : 'blue'}" 
+    (click)="showDisguiseList()"
+
+    >{{statusButton}}</button> -->
 </div>
 
 
